<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">歪脖子看世界</string>
    <string name="main_home">首页</string>
    <string name="main_news">信息</string>
    <string name="main_my_info">我的资料</string>
    <string name="title_info">资料</string>
    <string name="menu_search">搜索</string>
    <string name="more">更多</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
    <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    <string name="weibosdk_comment">评论</string>
    <string name="weibosdk_forward">转发</string>
    <string name="weibosdk_fav">收藏</string>
    <string name="testcontent"></string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_full_screen">LoginFullScreenActivity</string>
    <string name="oauth_dialog_title">授权提示</string>
    <string name="oauth_hint">请进行授权操作</string>
    <string name="oauth_button">授权</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="title_activity_oauth">OAuthActivity</string>
    <string name="login_button">登录</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_my_info">MyInfoActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="redirect_num">0</string>
    <string name="comment_num">0</string>
    <string name="resource">来自：新浪微博</string>
    <string name="create_time">1分钟前</string>
    <string name="bar_username">歪脖子看世界</string>
    <string name="default_user_name">新浪</string>
    <string name="title_activity_write_weibo">WriteWeiboActivity</string>
    <string name="write_text">发表新微博</string>
    <string name="write_hint">说点什么吧。。。。。。</string>
    <string name="max_num">140</string>
    <string name="title_activity_repost">RepostActivity</string>
    <string name="addcomment2repost">同时作为评论发布</string>
    <string name="repost_title">转发微博</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="comment_title">评论微博</string>
    <string name="addstatus2comment">同时发一条微博</string>
    <string name="title_activity_person_data">PersonDataActivity</string>
    <string name="title_activity_status_detail">StatusDetailActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_detail">微博正文</string>
    <string name="title_activity_comment_list">CommentListActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="tv_location">地址:</string>
    <string name="tv_description_title">介绍:</string>
    <string name="follow">关注</string>
    <string name="weibo">微博</string>
    <string name="follower">粉丝</string>
    <string name="topic">话题</string>
    <string name="unfollow">取消关注</string>
    <string name="title_activity_following">FollowingActivity</string>
    <string name="title_activity_follower_list">FollowerListActivity</string>
    <string name="title_activity_user_weibo">UserWeiboActivity</string>
    <string name="title_activity_at_me">AtMeActivity</string>
    <string name="title_activity_comment_about_me">CommentAboutMeActivity</string>
    <string name="search_hint">请输入要搜索用户的昵称</string>
    <string name="version">版本:1.0</string>

</resources>