<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!--  -->

    <include
        android:id="@+id/layout_title_bar"
        android:layout_weight="1"
        layout="@layout/comment_tilte_bar" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="top"
        android:hint="@string/write_hint"
        android:inputType="textMultiLine" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/new_repost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addstatus2comment" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_clear_content_selector"
            android:text="@string/max_num"
            android:textColor="#ff3030" />
    </RelativeLayout>

</LinearLayout>