<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_selector" >

    <ImageView
        android:id="@+id/img_wb_item_head"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/usericon" />

    <!-- 右边框架 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <!-- 用户名称、新浪认证部分 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- 用户名称 -->

            <TextView
                android:id="@+id/txt_wb_item_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_user_name"
                android:textColor="#424d54"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:textStyle="" />

            <!-- 新浪认证 -->

            <ImageView
                android:id="@+id/img_wb_item_V"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/v"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <!-- 发布时间 -->

                <TextView
                    android:id="@+id/txt_wb_item_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_time"
                    android:textColor="#efa608"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- 微博正文内容 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 微博正文内容 -->

            <TextView
                android:id="@+id/txt_wb_item_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColor="#6b717b"
                android:textIsSelectable="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_wb_item_content_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/detail_pic_loading"
                android:visibility="gone" />
        </LinearLayout>

        <!-- 微博转发内容 -->

        <LinearLayout
            android:id="@+id/lyt_wb_item_sublayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/popup"
            android:orientation="vertical"
            android:visibility="gone" >

            <!-- 微博正文内容 -->

            <TextView
                android:id="@+id/txt_wb_item_subcontent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColor="#6b717b"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_wb_item_content_subpic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:minHeight="40dp"
                android:minWidth="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/detail_pic_loading"
                android:visibility="gone" />
        </LinearLayout>

        <!-- 微博来源部分 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <!-- 用户名称 -->

            <TextView
                android:id="@+id/txt_wb_item_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resource"
                android:textColor="#9ba0aa"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_wb_item_reposed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/redirect_icon"
                    android:text="@string/redirect_num"
                    android:textColor="#9ba0aa"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_wb_item_comment1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:drawableLeft="@drawable/comment_icon"
                    android:text="@string/comment_num"
                    android:textColor="#9ba0aa"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>