<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".UserInfoActivity" >

    <FrameLayout
        android:id="@+id/info_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/suggestion_title_bg" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_back_selector" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/title_info"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/home_title_selector" />
    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/user_head"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/btn_follow_shape"
                    android:src="@drawable/switchuser" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/user_head"
                    android:text="asdjf"
                    android:textSize="20sp"
                     />

                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_follow_shape"
                    android:text="@string/follow"
                    android:visibility="gone" />


            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_retrive_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#838B83"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_location" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:textIsSelectable="false" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_line"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:textColor="#838B83"
                        android:id="@+id/tv_description_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_description_title"
                        android:textIsSelectable="false" />

                    <TextView
                        android:id="@+id/tv_despription"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:textIsSelectable="false" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/tv_retrive_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/follow_layout"
                        android:layout_width="160dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/num_follow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#9FB6CD" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/follow"
                            android:textIsSelectable="false" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="fill_parent"
                        android:background="@drawable/widget_line" />

                    <LinearLayout
                        android:id="@+id/weibo_layout"
                        android:layout_width="160dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/num_weibo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#9FB6CD" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/weibo"
                            android:textIsSelectable="false" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_line1"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/follower_layout"
                        android:layout_width="160dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/num_follower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#9FB6CD" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/follower"
                            android:textIsSelectable="false" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="fill_parent"
                        android:background="@drawable/widget_line" />

                    <LinearLayout
                        android:id="@+id/fav_layout"
                        android:layout_width="160dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/num_fav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#9FB6CD" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="false"
                            android:text="@string/weibosdk_fav"
                            android:textIsSelectable="false" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>